--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
 
         <h1 id="score">0</h1>
+        <button id="start-btn">Start Game</button>
         <div class="grid"></div>
 
         <script src="script.js"></script>
